fixed flickering

--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,3 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
-
-html {
-  font-size: 1em;
-}
-
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
-textarea {
-  resize: vertical;
-}
-
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
@@ -68,7 +24,7 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  position: relative;
+ /* position: relative;*/
   text-align: left;
   color: #838B91;
   font-family: Playfair,Georgia,"Times New Roman",serif;
@@ -80,25 +36,26 @@ strong {
 }
 
 .slides-container {
-  position: absolute;
+  position: fixed;
   left: 50%;
-  top: 52.5%;
+  top: 50%;
   width: 280px;
   height: 337.5px;
   overflow: hidden;
-  transform: translate(-50%, -52.5%);
+  transform: translate(-50%, -50%);
+  border-top: 1px solid rgba(221, 198, 33, 0.74);
 }
 
 .slide-content {
   position: absolute;
   left: 50%;
-  top: 52.5%;
+  top: 50%;
   /*z index is 2 because we want our content to sit above image*/
   z-index: 2;
   /*this is always center*/
   transform: translate(-50%, -50%);
   min-width: 280px;
-  min-height: 337.5px;
+  min-height: 250px;
   padding-left: 5px;
   /*border-top: 1px solid rgba(221, 198, 33, 0.74);*/
 }
@@ -107,7 +64,7 @@ strong {
   overflow: hidden;
   position: absolute;
   left: 50%;
-  top: 52.5%;
+  top: 50%;
   margin-top:-168.75px;
   margin-left: -140px;
   width: 280px;
@@ -116,7 +73,7 @@ strong {
   transform: translateX(100%);
   opacity: 1;
   visibility: visible;
-  border-top: 1px solid rgba(221, 198, 33, 0.74);
+  
 }
 
 .slide01 h1{
@@ -136,6 +93,7 @@ strong {
   height: 337.5px;
   opacity: 0.9;
   z-index: 1;
+
 }
 
 /*navigation*/
@@ -292,22 +250,23 @@ strong {
 
 @media only screen and (min-width: 1360px) { 
 
-  .slides-container,.slide, .bcg {
-    top: 55.3%;
-    width: 990px;
+  .slides-container{
+    top: 58%;
+    width: 900px;
     height: 675px;
   }
 
   .slide-content {
-    top: 52.5%;
-    min-width: 900px;
-    min-height: 570px;
+    max-width: 800px;   
     padding-left: 20px;
   }
 
   .slide {
+    top: 50%;
+    width: 900px;
+    height: 675px;
     margin-top:-337.5px;
-    margin-left: -495px;
+    margin-left: -450px;
   }
 
   .slide01 h1{
